<resources>
    <string name="app_name">OctoAndroid</string>
    <string name="title_activity_settings">Settings</string>
    <string name="status">Status</string>
    <string name="webcam">Webcam</string>
    <string name="temperature">Temperature</string>
    <string name="printers">Printers</string>
    <string name="printer_settings">Printer Settings</string>
    <string name="printer_controls">Printer Controls</string>
    <string name="controls">Controls</string>
    <string name="warning">Warning</string>
    <string name="warning_webcam_message">Webcam is currently experimental. Try at your own risk!</string>
    <string name="ip_address">IP Address</string>
    <string name="api_key">API Key</string>
    <string name="qr_code">QR Code</string>
    <string name="no_printer_found">No Printer Found</string>
    <string name="app_running_cannot_delete_account">Application is currently running. Cannot delete account.</string>
    <string name="add_printer">Add Printer</string>
    <string name="port">Port</string>
    <string name="secure_connection_ssl">Secure Connection (SSL)</string>
    <string name="printer_name">Printer Name</string>
    <string name="octoprint_background_image">OctoPrint Background Image</string>
    <string name="close">Close</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="connection">Connection</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="print">Print</string>
    <string name="download">Download</string>
    <string name="disconnect_warning">Are you sure you want to disconnect?</string>

    <string name="files">Files</string>
    <string name="load">Load</string>
    <string name="file_location">File Location</string>
    <string name="delete_file">Delete File</string>
    <string name="no_files_found">No files found</string>
    <string name="print_restart">Print/Restart</string>
    <string name="resume_pause">Resume/Pause</string>
    <string name="stop">Stop</string>
    <string name="stop_print_warning">Are you sure you want to cancel this print?</string>
    <string name="file_details">File Details</string>
    <string name="upload">Upload</string>
    <string name="more">More</string>
    <string name="ip_address_edit_text_hint">octopi.local</string>
    <string name="port_443">443</string>
    <string name="port_80">80</string>
    <string name="refresh">Refresh</string>

    <string name="free_colon_space">Free:&#160;</string>
    <string name="space_backslash_space">&#160;/&#160;</string>
    <string name="total_colon_space">Total:&#160;</string>
    <string name="serial_port">Serial Port</string>
    <string name="baudrate">Baudrate</string>
    <string name="printer_profile">Printer Profile</string>
    <string name="save_connection_settings">Save connection settings</string>
    <string name="auto_connect_on_server_startup">Auto-Connect on server startup</string>

    <string name="state">State</string>
    <string name="summary">Summary</string>
    <string name="machine_state_colon_space">Machine State:&#160;</string>
    <string name="file_colon_space">File:&#160;</string>
    <string name="approx_total_print_time_colon_space">Approx. Total Print Time:&#160;</string>
    <string name="print_time_colon_space">Print Time:&#160;</string>
    <string name="print_time_left_colon_space">Print Time Left:&#160;</string>
    <string name="printed_colon_space">Printed:&#160;</string>
    <string name="non_breakable_space">&#160;</string>
    <string name="breakable_space">&#032;</string>

    <string name="actual_temp_bed_chart_label">Bed - Actual(&#x2103;)</string>
    <string name="target_temp_bed_chart_label">Bed - Target(&#x2103;)</string>
    <string name="actual_temp_tool0_chart_label">Tool0 - Actual(&#x2103;)</string>
    <string name="target_temp_tool0_chart_label">Tool0 - Target(&#x2103;)</string>
    <string name="actual_temp_tool1_chart_label">Tool1 - Actual(&#x2103;)</string>
    <string name="target_temp_tool1_chart_label">Tool1 - Target(&#x2103;)</string>

    <string name="degrees_celcius">&#x2103;</string>
    <string name="degrees">&#xb0;</string>

    <string name="graph">Graph</string>
    <string name="tool0">Tool0</string>
    <string name="tool1">Tool1</string>
    <string name="bed">Bed</string>
    <string name="actual">Actual</string>
    <string name="target">Target</string>
    <string name="offset">Offset</string>
    <string name="set">Set</string>

    <string name="lock_screen">Lock Screen</string>
    <string name="unlock_screen">Unlock Screen</string>

    <string name="print_head">Print Head</string>
    <string name="x_y_label">X/Y</string>
    <string name="z_label">Z</string>
    <string name="zero_point_one">0.1</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="hundred">100</string>
    <string name="feed_rate_colon_space">Feed rate:&#160;</string>
    <string name="percent">%</string>

    <string name="tool">Tool</string>
    <string name="mm">mm</string>
    <string name="retract">Retract</string>
    <string name="extract">Extract</string>
    <string name="flow_rate_colon_space">Flow rate:&#160;</string>

    <string name="general">General</string>
    <string name="motors_off">Motors Off</string>
    <string name="fan_on">Fan On</string>
    <string name="fan_off">Fan Off</string>

    <string name="print_complete">Print Complete</string>
    <string name="printing">Printing</string>
    <string name="printing_space_colon">Printing:&#160;</string>
    <string name="in_progress">In Progress</string>
    <string name="print_stopped">Print Stopped</string>
    <string name="print_stopped_description">Printer disconnected or error occurred</string>

    <string name="slicer">Slicer</string>
    <string name="do_nothing">Do nothing</string>
    <string name="select_for_printing">Select for printing</string>
    <string name="start_printing">Start printing</string>
    <string name="settings">Settings</string>
    <string name="slicing_profile">Slicing Profile</string>
    <string name="after_slicing">After Slicing</string>
    <string name="gcode_filename_colon_space">GCode Filename:&#160;</string>
    <string name="slice">Slice</string>
    <string name="dot_gco" translatable="false">.gco</string>

    <string name="colon_space" translatable="false">:&#160;</string>
    <string name="slicing_in_progress">Slicing In Progress</string>
    <string name="source_location">Source Location</string>
    <string name="source_file">Source File</string>
    <string name="destination_location">Destination Location</string>
    <string name="destination_file">Destination File</string>
    <string name="slice_complete">Slice complete</string>

    <string name="cant_login">Can\'t login?</string>
    <string name="help_colon_add_printer">Help: Add Printer</string>
    <string name="bullet_point">\u2022</string>
    <string name="add_printer_help_1_0">Where the hell do I get the API key?</string>
    <string name="add_printer_help_1_1">API key can be found in OctoPrint\'s Settings > Features > API section</string>
    <string name="add_printer_help_1_2">OctoAndroid is able to scan the QR code directly with the camera</string>
    <string name="add_printer_help_1_3"><a href="http://docs.octoprint.org/en/master/api/general.html">See official OctoPrint docs for more info</a></string>
    <string name="add_printer_help_2_0">Trouble adding printer?</string>
    <string name="add_printer_help_2_1">If using octopi.local try adding the actual IP address instead</string>
    <string name="add_printer_help_2_2">Try unchecking SSL. If security is an issue,
        you will need to verify that the certificate is added to your device\'s
        \'system-trusted\' certificates. This requires root access.
        This is due to OctoPrint\'s certificate being self-signed.</string>
    <string name="add_printer_help_2_3"><a href ="http://wiki.cacert.org/FAQ/ImportRootCert#CAcert_system_trusted_certificates_.28without_lockscreen.29">Click here for more info</a></string>
    <string name="add_printer_help_2_4"><a href="mailto:nairbspace+octoandroid@gmail.com">Feel free to contact the developer via email for any help</a></string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_active_printer">Set as Active Printer</string>

    <string name="terminal">Terminal</string>
    <string name="enable_autoscroll">Enable Autoscroll</string>
    <string name="disable_autoscroll">Disable Autoscroll</string>
    <string name="console">Console</string>
    <string name="send">Send</string>
    <string name="command">Command</string>
    <string name="edit_command">Edit Command</string>
    <string name="command_hint">Ex: M18, M106 S0</string>
    <string name="command_instructions">Separate multiple commands with a comma</string>
    <string name="command_sent">Command Sent</string>
    <string name="uppercase">Uppercase</string>

    <string name="ssl_warning">Warning: SSL may cause issues since certificate is self-signed</string>

    <string name="jog_y_axis_up">Jog Y-Axis Up</string>
    <string name="jog_y_axis_down">Jog Y-Axis Down</string>
    <string name="jog_x_axis_left">Jog X-Axis Left</string>
    <string name="jog_x_axis_right">Jog X-Axis Right</string>
    <string name="home_x_y_axes">Home X/Y Axes</string>
    <string name="jog_z_axis_up">Jog Z-Axis Up</string>
    <string name="jog_z_axis_down">Jog Z-Axis Down</string>
    <string name="home_z_axis">Home Z-Axis</string>

</resources>
