<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/files_list_on_click_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal"
    android:visibility="gone"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/file_download_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:alpha="@dimen/drawable_active_opacity"
        android:src="@drawable/ic_file_download_black_24dp"
        android:contentDescription="@string/download"/>
    <ImageView
        android:id="@+id/file_delete_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:alpha="@dimen/drawable_active_opacity"
        android:src="@drawable/ic_delete_black_24dp"
        android:contentDescription="@string/delete_file"/>
    <ImageView
        android:id="@+id/load_file_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:alpha="@dimen/drawable_active_opacity"
        android:src="@drawable/ic_folder_black_24dp"
        android:contentDescription="@string/load"/>
    <ImageView
        android:id="@+id/printer_file_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:alpha="@dimen/drawable_active_opacity"
        android:src="@drawable/ic_print_black_24dp"
        android:contentDescription="@string/print"/>

</LinearLayout>